--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,9 +23,11 @@
     "@tiptap/extension-placeholder": "^3.11.1",
     "@tiptap/react": "^3.11.1",
     "@tiptap/starter-kit": "^3.11.1",
+    "@types/d3": "^7.4.3",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.555.0",
     "next": "16.0.6",
