--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
+    "expo": "^54.0.25",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.555.0",
     "next": "16.0.6",
